--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -194,7 +194,22 @@ en:
   jumbotron_hardmoneytitle_html: <h2>Hardmoney Lenders Services</h2>
   jumbotron_homeinspectortitle_html: <h2>Home Inspectors Services</h2>
   jumbotron_insulationtitle_html: <h2>Insulation Services</h2>
+  jumbotron_interiordesignertitle_html: <h2>Interior Designers Services</h2> 
+  jumbotron_landscapingtitle_html: <h2>Landscaping Services</h2> 
+  jumbotron_landsurveyortitle_html: <h2>Land Surveyor Services</h2>
+  jumbotron_lawyertitle_html: <h2>Real Estate Lawyers Services</h2>
+  jumbotron_moldtitle_html: <h2>Mold Services</h2>
+  jumbotron_mortgagetitle_html: <h2>Mortgage Services</h2>
   searchservice_html: <h4><strong>Find a Service</strong></h4>
+  jumbotron_subscriptiontitle_html: <h2>Real Estate Businesses Subscribed</h2>
+  companynamesubscription_html: <strong><th class="center">Company Name</th></strong>
+  companysitesubscription_html: <strong><th class="center">Company Website</th></strong>
+  addresssubscription_html: <strong><th class="center">Address</th></strong>
+  citysubscription_html: <strong><th class="center">City</th></strong>
+  zipcodesubscription_html: <strong><th class="center">Zipcode</th></strong>
+  phonesubscription_html: <strong><th class="center">Phone Number</th></strong>
+  actionsubscription_html: <th class="center">Action</th>
+  add_subscription: SUBSCRIBE
   servicecompanywebsite: Company Website
   servicecompanyphone: Company Phone
   servicecompanyaddress: Address
