--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -164,7 +164,7 @@ en:
   website: Company Website
   address: Address
   zipcode: Zip Code
-  city: city
+  city: City
   businessphone: Business Phone
   contactname: Contact Name
   businessemail: Company Email
