--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -208,6 +208,7 @@ fr:
   jumbotron_titletitle_html: <h2>Les sociétés de Titre</h2>
   jumbotron_windowtitle_html: <h2>Fenêtres</h2>
   jumbotron_missingservicestitle_html: <h2>Services Immobiliers</h2>
+  jumbotron_asphalttitle_html: <h2>Services d'asphalte</h2>
   searchservice_html: <h4><strong>Trouver un Service</strong></h4>
   jumbotron_subscriptiontitle_html: <h2>Les Entreprises Immobilières Abonné</h2>
   companynamesubscription_html: <strong><th class="center">Nom de l'entreprise</th></strong>
