--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,7 +62,7 @@ en:
   salerent: Property for Purchase or Lease
   propertytype: Type of Property
   status: Property Status
-  foreclosure: Is a Floreclosure Property?
+  foreclosure: Floreclosure Property?
   construction: Type of Construction
   bedrooms: Bedrooms
   fullbathrooms: Full Bathrooms
@@ -87,7 +87,7 @@ en:
   jumbotron_commercialtitle_html: <h2>Commercial Property Listing</h2>
   privacy_html: <h2 style="font-family:Arial"><strong>PRIVACY POLICY</strong></h2>
   architect_html: <h3 class="panel-title">ARCHITECTS</h3>
-  airconditioner_html: <h3 class="panel-title">AIR CONDITIONER/ HEATING / VENTILATION</h3>
+  airconditioner_html: <h3 class="panel-title">AIR CONDITIONING/ HEATING / VENTILATION</h3>
   asphalt_html: <h3 class="panel-title">ASPHALT COMPANIES</h3>
   banks_html:  <h3 class="panel-title">BANKS</h3>
   builder_html:  <h3 class="panel-title">BUILDERS</h3>
@@ -96,18 +96,18 @@ en:
   cabinet_html: <h3 class="panel-title">CABINETS</h3>
   cement_html:  <h3 class="panel-title">CEMENT AND CONCRETE</h3>
   cleaning_html:  <h3 class="panel-title">CLEANING SERVICES</h3>
-  countertops_html: <h3 class="panel-title">COUNTERTOP AND SURFACES</h3>
-  cleaningremoval_html:  <h3 class="panel-title">CLEANING REMOVAL WASTE</h3>
+  countertops_html: <h3 class="panel-title">COUNTERTOPS AND SURFACES</h3>
+  cleaningremoval_html:  <h3 class="panel-title">CLEANING / REMOVAL WASTE</h3>
   decks_html: <h3 class="panel-title">DECKS AND FENCES</h3>
   drywall_html: <h3 class="panel-title">DRYWALL</h3>
   electricians_html: <h3 class="panel-title">ELECTRICIANS</h3>
-  eav_html:  <h3 class="panel-title">EAVESTROUGHINGS</h3>
+  eav_html:  <h3 class="panel-title">EAVESTROUGHING</h3>
   exterior_html: <h3 class="panel-title">EXTERIOR DESIGNERS</h3>
   engineer_html: <h3 class="panel-title">ENGINEERS</h3>
   flooring_html: <h3 class="panel-title">FLOORING</h3>
   framing_html: <h3 class="panel-title">FRAMING</h3>
   foundation_html: <h3 class="panel-title">FOUNDATION (NEW + REPAIRS)</h3>
-  fireplace_html: <h3 class="panel-title">FIREPLACE / CHIMNEG</h3>
+  fireplace_html: <h3 class="panel-title">FIREPLACE / CHIMNEY</h3>
   general_html: <h3 class="panel-title">GENERAL CONTRACTORS</h3>
   homeinspector_html: <h3 class="panel-title">HOME INSPECTORS</h3>
   hardmoney_html: <h3 class="panel-title">HARDMONEY LENDERS</h3>
@@ -115,7 +115,7 @@ en:
   insulation_html:  <h3 class="panel-title">INSULATION</h3>
   interior_html: <h3 class="panel-title">INTERIOR DESIGNERS</h3>
   wood_html: <h3 class="panel-title">WOOD / VINYL / ALUMINUM</h3>
-  light_html: <h3 class="panel-title">LIGHTING STORES FIXTURES/FANS</h3>
+  light_html: <h3 class="panel-title">LIGHTING FIXTURES / FANS</h3>
   landscaping_html: <h3 class="panel-title">LANDSCAPING</h3>
   landsurveyors_html: <h3 class="panel-title">LAND SURVEYORS</h3>
   moving_html: <h3 class="panel-title">MOVING COMPANIES</h3>
@@ -131,22 +131,23 @@ en:
   accountant_html: <h3 class="panel-title">REAL ESTATE ACCOUNTANTS</h3>
   lawyer_html: <h3 class="panel-title">REAL ESTATE LAWYERS</h3>
   realestate_html: <h3 class="panel-title">REAL ESTATE FIRMS</h3>
-  rentalpropertyfirm_html: <h3 class="panel-title">RENTAL PROPERTIES FIRMS/MANAGEMENT</h3>
+  rentalpropertyfirm_html: <h3 class="panel-title">RENTAL PROPERTY FIRMS/MANAGEMENT</h3>
   remodel_html: <h3 class="panel-title">REMODEL / RENOVATION SPECIALISTS</h3>
   roofing_html: <h3 class="panel-title">ROOFING</h3>
   security_html: <h3 class="panel-title">SECURITY COMPANIES</h3>
   septic_html: <h3 class="panel-title">SEPTIC SPECIALISTS</h3>
-  solarscreen_html: <h3 class="panel-title">SOLAR SCREENS/WINDOW TREATMENT</h3>
+  solarscreen_html: <h3 class="panel-title">SOLAR SCREENS / WINDOW TREATMENTS</h3>
   staging_html: <h3 class="panel-title">STAGING COMPANIES</h3>
   soffit_html: <h3 class="panel-title">SOFFIT FACIA</h3>
-  spapool_html: <h3 class="panel-title">SPA POOLS SALES/INSTALERS/REPAIRS</h3>
+  spapool_html: <h3 class="panel-title">SPA AND POOL SALES / INSTALERS / REPAIRS</h3>
   solarenergy_html: <h3 class="panel-title">SOLAR ENERGY</h3>
-  dissable_html: <h3 class="panel-title">SENIOR OR DISABLED PEOPLE HOME OR OFFICE EQUIPMENT</h3>
+  dissable_html: <h3 class="panel-title">SENIOR OR DISABLED HOME OR OFFICE EQUIPMENT</h3>
   tax_html: <h3 class="panel-title">TAX SPECIALIST</h3>
   termite_html: <h3 class="panel-title">TERMITE INSPECTORS</h3>
   titlecompany_html: <h3 class="panel-title">TITLE COMPANIES</h3>
   windows_html: <h3 class="panel-title">WINDOWS MANUFACTURERS AND INSTALLERS</h3>
   weather_html: <h3 class="panel-title">WEATHER PROOFING / WINTERIZING</h3>
+  appliance_html: <h3 class="panel-title">APPLIANCE SALES</h3>
   adtitle_html:  <font color="cf142b"><h2 style="font-family:Calibri"><strong>Choose Your Advertising Plan Or List a Property For Rent/Sale And Maximize The Customers For Your Business!</strong></h2></font>
         <p class="lead"></p>
   adsubtitle_html:   <font color="858585"><h6 style="font-family:Calibri"><strong>*To cancel your subscription please contact us to our customer support email or our customer support phone.</strong></h6></font>
@@ -178,9 +179,9 @@ en:
   cardexpiration: Card Expiration Date
   submit: Submit my Order
   ourcompany_html:  <h2 style="font-family:Arial"><strong>OUR COMPANY</strong></h2>
-  bodycompany_html: <h4><strong>Ontario's Only</strong> is an online marketing company that offers proffessional advertising service to all real estate professionals in the province of Canada.<br><br><strong>Ontario's Only</strong> is part of one of the <strong>D&G Global</strong> marketing software strategies that offer their clients to maximize the customers and their businesses. <br><br><strong>D&G Global</strong> is a software development consulting company that offer customize techologies services like website development services for your business to link them with <strong>Ontario's Only</strong> to maximize your clients through the newest web development technologies as well as marketing strategies. <br></h4>
+  bodycompany_html: <h4><strong>Ontario's Only</strong> is an online marketing company that offers proffessional advertising service to all real estate professionals in the province of Canada.<br><br><strong>Ontario's Only</strong> is part of <strong>D&G Global</strong> marketing software strategies that maximizes clients exposure and customers databases. <br><br><strong>D&G Global</strong> is a software development consulting company that offers customized techology services such as website development services, marketing strategies, global exposure through <strong>Ontario's Only</strong><br></h4>
   subbodycompany_html: <h4><strong>HOW TO CONTACT US</strong></h4>
-  morecompany_html: <h4>If you would like to contact us with any queries or comments please send an email to <strong>customers@ontariosonly.ca</strong> or call to <strong>1-844-ONT-ONLY</strong> <br></p></h4>
+  morecompany_html: <h4>If you would like to contact us with any inquiries or comments please send an email to <strong>customers@ontariosonly.ca</strong> or call to <strong>1-844-ONT-ONLY</strong> <br></p></h4>
   jumbotron_flooringstitle_html: <h2>Flooring Services</h2>
   jumbotron_drywalltitle_html: <h2>Drywall Services</h2>
   jumbotron_cabinetstitle_html: <h2>Cabinets Services</h2>
