--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -152,7 +152,7 @@ en:
         <p class="lead"></p>
   adsubtitle_html:   <font color="858585"><h6 style="font-family:Calibri"><strong>*To cancel your subscription please contact us to our customer support email or our customer support phone.</strong></h6></font>
         <p class="lead"></p>
-  psubtitle_html:  <font color="bf0a30"><h4 style="font-family:Calibri"><strong>*Ask for our Platinum and Diamond Packages</strong></h4></font>
+  psubtitle_html:  <font color="272727"><h3 style="font-family:Calibri"><strong>*Ask for our Platinum and Diamond Packages</strong></h3></font>
         <p class="lead"></p>
   wsubtitle_html: <font color="bf0a30"><h4 style="font-family:Calibri"><strong>*Ask about our Website Development Service for your business by D&G Global to link your business with Ontario's Only to maximize your clients.</strong></h4></font>
         <p class="lead"></p>
