--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -139,7 +139,7 @@ fr:
         <p class="lead"></p>
   adsubtitle_html:   <font color="858585"><h6 style="font-family:Calibri"><strong>*Pour annuler votre abonnement se il vous plaît contactez-nous à notre e-mail de soutien à la clientèle ou notre téléphone de support client..</strong></h6></font>
         <p class="lead"></p>
-  psubtitle_html:  <font color="bf0a30"><h4 style="font-family:Calibri"><strong>*Demandez notre Platinum et Diamond Packages</strong></h4></font>
+  psubtitle_html:  <font color="272727"><h3 style="font-family:Calibri"><strong>*Demandez notre Platinum et Diamond Packages</strong></h3></font>
         <p class="lead"></p>
   wsubtitle_html: <font color="bf0a30"><h4 style="font-family:Calibri"><strong>*Renseignez-vous sur notre service de développement site web pour votre entreprise par D&G Global <br> de lier votre entreprise avec Ontario's Only afin de maximiser vos clients..</strong></h4></font>
         <p class="lead"></p>
