--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -139,7 +139,7 @@ en:
   solarscreen_html: <h3 class="panel-title">SOLAR SCREENS / WINDOW TREATMENTS</h3>
   staging_html: <h3 class="panel-title">STAGING COMPANIES</h3>
   soffit_html: <h3 class="panel-title">SOFFIT FACIA</h3>
-  spapool_html: <h3 class="panel-title">SPA AND POOL SALES / INSTALERS / REPAIRS</h3>
+  spapool_html: <h3 class="panel-title">SPA AND POOL SALES / INSTALLERS / REPAIRS</h3>
   solarenergy_html: <h3 class="panel-title">SOLAR ENERGY</h3>
   dissable_html: <h3 class="panel-title">SENIOR OR DISABLED HOME OR OFFICE EQUIPMENT</h3>
   tax_html: <h3 class="panel-title">TAX SPECIALIST</h3>
