--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,6 +151,8 @@ en:
   appliancerepair_html: <h3 class="panel-title">APPLIANCE REPAIRS</h3>
   adtitle_html:  <font color="cf142b"><h2 style="font-family:Calibri"><strong>Choose Your Advertising Plan Or List a Property For Rent/Sale And Maximize The Customers For Your Business!</strong></h2></font>
         <p class="lead"></p>
+  addtitle_html:  <font color="166e40"><h2 style="font-family:Calibri"><strong>** First 100 Users that subscribe with us get 30% off in the monthly subscription</strong></h2></font>
+        <p class="lead"></p>
   adsubtitle_html:   <font color="858585"><h6 style="font-family:Calibri"><strong>*To cancel your subscription please contact us to our customer support email or our customer support phone.</strong></h6></font>
         <p class="lead"></p>
   psubtitle_html:  <font color="007135"><h3 style="font-family:Calibri"><strong>***Ask for our Platinum and Diamond Packages***</strong></h3></font>
