--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,7 +151,7 @@ en:
   appliancerepair_html: <h3 class="panel-title">APPLIANCE REPAIRS</h3>
   adtitle_html:  <font color="cf142b"><h2 style="font-family:Calibri"><strong>Choose Your Advertising Plan Or List a Property For Rent/Sale And Maximize The Customers For Your Business!</strong></h2></font>
         <p class="lead"></p>
-  addtitle_html:  <font color="1d3894"><h2 style="font-family:Calibri"><strong>** First 50 Users that subscribe to Gold or Dealership Advertising will receive 30% off for the entire length of their commitment **</strong></h2></font>
+  addtitle_html:  <font color="1d3894"><h2 style="font-family:Calibri"><strong>** First 50 Users that subscribe to Gold or Listing Advertising will receive 30% off for the entire length of their commitment **</strong></h2></font>
         <p class="lead"></p>
   adsubtitle_html:   <font color="858585"><h6 style="font-family:Calibri"><strong>*To cancel your subscription please contact us to our customer support email or our customer support phone.</strong></h6></font>
         <p class="lead"></p>
