--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,7 +114,7 @@ en:
   theater_html: <h3 class="panel-title">HOME THEATERS</h3>
   insulation_html:  <h3 class="panel-title">INSULATION</h3>
   interior_html: <h3 class="panel-title">INTERIOR DESIGNERS</h3>
-  wood_html: <h3 class="panel-title">SIDING AND STUKO</h3>
+  wood_html: <h3 class="panel-title">SIDING AND STUCCO</h3>
   light_html: <h3 class="panel-title">LIGHTING FIXTURES / FANS</h3>
   landscaping_html: <h3 class="panel-title">LANDSCAPING</h3>
   landsurveyors_html: <h3 class="panel-title">LAND SURVEYORS</h3>
